# devIR

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: test.yml
src/: __init__.py  graph.py  llm.py  main.py  nodes.py  prompts.py  state.py
src/tools/: __init__.py  file_tool.py  search_tool.py
tests/: test_agent.py
